src/app/pages/quickMaps/pages/biomarkers/biomarkerStatus/biomarkerStatus.component.scss
.status-element {
  display: block;
  margin-top: 20px;
  margin-left: 5%;
  margin-right: 5%;
  text-align: center;
}

.status-map-select {
  position: absolute;
  left: 30%;
  top: 10px;
  z-index: 999;
}

.data-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(3, 1fr);
  grid-row-gap: 0px;
  grid-column-gap: 10px;
  margin-left: 140px;
}

.pull-right {
  text-align: right;
}

.pull-left {
  text-align: left;
}

mat-form-field {
  width: 30%;
  min-width: 300px;
}

.spacer {
  margin-left: 20px;
  margin-right: 20px;
}

